# alpaca-markets-cpp

./: .clang-format  .gitignore  .markdownlint-cli2.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml  release.yml
cmake/: README.md  alpaca_markets-config.cmake.in
examples/: CMakeLists.txt  README.md  check_market_status.cpp  get_latest_quote.cpp  view_account_info.cpp
include/: README.md
include/alpaca/markets/: account.hpp  announcement.hpp  asset.hpp  auction.hpp  bars.hpp  calendar.hpp  client.hpp  clock.hpp  config.hpp  corporate_action.hpp  crypto.hpp  markets.hpp  multi_quote.hpp  multi_trade.hpp  news.hpp  option.hpp  order.hpp  pagination.hpp  portfolio.hpp  position.hpp  quote.hpp  snapshot.hpp  status.hpp  streaming.hpp  trade.hpp  watchlist.hpp
include/alpaca/markets/models/: Makefile  README.md  account.hpp  announcement.hpp  asset.hpp  auction.hpp  bars.hpp  calendar.hpp  clock.hpp  corporate_action.hpp  crypto.hpp  multi_quote.hpp  multi_trade.hpp  news.hpp  option.hpp  order.hpp  pagination.hpp  portfolio.hpp  position.hpp  quote.hpp  snapshot.hpp  status.hpp  trade.hpp  watchlist.hpp
include/alpaca/markets/rest/: Makefile  README.md  client.hpp  config.hpp
include/alpaca/markets/stream/: Makefile  README.md  streaming.hpp
src/: README.md
src/detail/: Makefile  README.md  json.hpp
src/models/: Makefile  README.md  account.cpp  announcement.cpp  asset.cpp  auction.cpp  bars.cpp  calendar.cpp  clock.cpp  corporate_action.cpp  crypto.cpp  multi_quote.cpp  multi_trade.cpp  news.cpp  option.cpp  order.cpp  portfolio.cpp  position.cpp  quote.cpp  snapshot.cpp  status.cpp  trade.cpp  watchlist.cpp
src/rest/: Makefile  README.md  client.cpp  config.cpp
src/stream/: Makefile  README.md  streaming.cpp
tests/: CMakeLists.txt  README.md  account_test.cpp  announcement_test.cpp  auction_test.cpp  bars_test.cpp  config_test.cpp  corporate_action_test.cpp  crypto_test.cpp  multi_data_test.cpp  news_test.cpp  option_test.cpp  order_test.cpp  quote_test.cpp  snapshot_test.cpp  status_test.cpp  streaming_test.cpp  trade_test.cpp
